# kayra

./: .gitignore  README.md
.github/workflows/: auto-assign.yml
log/: latest_list
setup/: setup_fastdds_env.sh  setup_fastdds_ground.sh  setup_fastdds_robot.sh  super_client_configuration.xml
src/ika_actions/: CMakeLists.txt  package.xml
src/ika_actions/action/: AlignWithPath.action  GoForward.action  LockTarget.action  RampAlignment.action
src/ika_actions/ika_actions/: __init__.py  align_ramp.py  align_with_path.py  go_forward.py  lock_target.py  lock_target_real.py
src/ika_controller/: CMakeLists.txt  package.xml
src/ika_controller/config/: ika_controllers.yaml
src/ika_controller/ika_controller/: camera_node.py  camera_node_real.py  controller.py  event_caller.py  event_detector.py  joy_controller.py  joy_controller_state.py  joy_controller_test.py  key_vel_controller.py  mission_controller.py  mission_planner.py  serial_controller.py  serial_controller_real.py  system_state_manager.py
src/ika_controller/launch/: ika_controllers.launch.py  kayra_controllers.launch.py  shoot_test.launch.py
src/ika_controller/mission/: other_mission.json  trial_mission.json
src/ika_description/: CMakeLists.txt  package.xml
src/ika_description/ika_description/: spawn_entity_qos.py
src/ika_description/launch/: ika_gazebo.launch.py  ika_world.launch.py
src/ika_description/models/bariyer/: model.config  model.sdf
src/ika_description/models/bariyer_obj/: model.config  model.sdf
src/ika_description/models/bariyer_obj/meshes/: bariyer.mtl
src/ika_description/models/cizgiler/: model.config  model.sdf
src/ika_description/models/cizgiler/meshes/: cizgiler.dae
src/ika_description/models/dik_egim/: model.config  model.sdf
src/ika_description/models/dik_egim/meshes/: dik_egim.dae
src/ika_description/models/dik_egim_obj/: model.config  model.sdf
src/ika_description/models/dik_egim_obj/meshes/: dik_egim.mtl
src/ika_description/models/dik_engel/: model.config  model.sdf
src/ika_description/models/engebeli_arazi/: model.config  model.sdf
src/ika_description/models/engebeli_arazi/meshes/: engebeli_arazi.mtl
src/ika_description/models/kukalar/: model.config  model.sdf
src/ika_description/models/kukalar/meshes/: kukalar.mtl
src/ika_description/models/sudan_gecis_obj/: model.config  model.sdf
src/ika_description/models/sudan_gecis_obj/meshes/: sudan_gecis.mtl
src/ika_description/models/sudangecis/: model.config  model.sdf
src/ika_description/models/sudangecis/meshes/: sudangecis.dae
src/ika_description/models/tabela/: model.config  model.sdf
src/ika_description/models/tabela/meshes/: tabelalar.mtl
src/ika_description/models/tabelalar/: model.config  model.sdf
src/ika_description/models/tasli_yol/: model.config  model.sdf
src/ika_description/models/yan_egim/: model.config  model.sdf
src/ika_description/models/yan_egim/meshes/: yan_egim.dae
src/ika_description/models/yan_egim_obj/: model.config  model.sdf
src/ika_description/models/yol/: model.config  model.sdf
src/ika_description/models/yol/meshes/: yol.dae
src/ika_description/models/yol_obj/: model.config  model.sdf
src/ika_description/models/yol_obj/meshes/: yol.mtl
src/ika_description/models/zemin/: model.config  model.sdf
src/ika_description/models/zemin/meshes/: zemin.dae
src/ika_description/models/zemin_obj/: model.config  model.sdf
src/ika_description/rviz/: display.rviz  robot.rviz  shoot.rviz
src/ika_description/urdf/: ika_nav.urdf.xacro  kayra.urdf.xacro  kayra_gazebo.xacro  kayra_macros.xacro  kayra_ros2_control.xacro
src/ika_description/worlds/: empty.world  igvc_race_easier2.sdf  ika_parkur.sdf  ika_parkur2.sdf  ika_parkur3.sdf  ika_parkur4.sdf  obstacles2.sdf  shoot_test.sdf
src/ika_filters/: CMakeLists.txt  package.xml
src/ika_filters/ika_filters/: particle_filter.py  particle_filter_fixed.py  pf_localization.py
src/ika_filters/scr/: filters_scr.py  particlefilter_scr.py
src/ika_launch/: CMakeLists.txt  package.xml
src/ika_launch/launch/: ika_auto.launch.py  simulation.launch.py  simulation.xml
src/ika_msgs/: CMakeLists.txt  package.xml
src/ika_msgs/msg/: CameraShooterDebug.msg  ColorFilter.msg  IsInWater.msg  MotorFeedback.msg  RampDistance.msg  RampFeedback.msg  RampInfo.msg
src/ika_nav/: CMakeLists.txt  package.xml
src/ika_nav/ika_nav/: lane_keeper.py  path_planner.py  path_planner_real.py  path_resolver.py  path_tracker.py  path_tracker_simulation.py
src/ika_utils/: CMakeLists.txt  package.xml
src/ika_utils/ika_utils/: costmap_utils.py  motion_model_utils.py  nav_utils.py  ui.py
src/ika_vision/: CMakeLists.txt  README_launch.md  package.xml
src/ika_vision/ika_vision/: hsv_filter.py  hsv_filters.py  hsv_map.py  optimize_camera.py  process_video.py  shoot_controller.py  shoot_test.py  shoot_test_old.py  shoot_test_real.py  sign_detector.py  video_publisher.py  video_recorder.py  vision_transformer.py  vision_transformer_real.py
src/ika_vision/launch/: camera.launch.py  recorders.launch.py  shoot_test.launch.py
src/log/: latest_list
src/rake_core/: CMakeLists.txt  package.xml
src/rake_core/config/: rake_base.json  rake_base2.json
src/rake_core/rake_core/: constants.py  core.py  node.py  node1.py  node2.py  states.py
src/rake_msgs/: CMakeLists.txt  package.xml
src/rake_msgs/msg/: ResetCommand.msg  RoadSign.msg  RoadSignArray.msg  ShootCommand.msg  SystemState.msg
src/rake_msgs/srv/: LoadConfig.srv  SaveConfig.srv  UpdateDeviceState.srv  UpdateSystemState.srv  WaitForEvent.srv
ui/src/: joy.html  sensors.html  server.py  viewer.html  viewer9.html  wounded.html  wounded2.html  wounded3.html
ui/src/a_tutorials/: control.html  control2.html  control3.html  control4.html  flex.html  flex2.html  index.html  navbar.html
ui/src/js/: go_to_goal_window.js
ui/src/style/: sensors.css  wounded.css
