cmake_minimum_required(VERSION 3.8)
project(ika_utils)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(geometry_msgs REQUIRED)

ament_python_install_package(${PROJECT_NAME})

install(PROGRAMS
    ${PROJECT_NAME}/costmap_utils.py
    ${PROJECT_NAME}/motion_model_utils.py
    ${PROJECT_NAME}/nav_utils.py
    ${PROJECT_NAME}/ui.py
    DESTINATION lib/${PROJECT_NAME}
)
ament_package()
